<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shixels.activity.profile.Help">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/title"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="@color/redText"
                android:layout_gravity="center_horizontal"
                android:text="@string/helpTitle" />

        </LinearLayout>

        <TextView
            android:layout_below="@+id/title"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:textColor="@color/blueText"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="15sp"
            android:id="@+id/content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/about" />
        <Button
            android:layout_width="wrap_content"
            android:layout_below="@+id/content"
            android:layout_centerHorizontal="true"
            android:text="@string/contactus"
            android:visibility="gone"
            android:backgroundTint="@color/yellowText"
            android:layout_height="wrap_content"
            android:id="@+id/message"/>


    </RelativeLayout>

</FrameLayout>
